# object-member-replacer

./: .cspell.json  .editorconfig  .gitignore  .npmrc  Cargo.toml  README.md  a.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.changeset/: brave-pillows-march.md  calm-hairs-impress.md  chilled-melons-turn.md  friendly-ligers-sort.md  gold-cycles-turn.md  good-tools-compare.md  large-peaches-kiss.md  long-jars-sort.md  loud-jokes-itch.md  mean-mayflies-compete.md  moody-poems-shake.md  quick-bugs-tickle.md  serious-tigers-cover.md  short-pigs-thank.md  stupid-hats-notice.md  stupid-trainers-kiss.md  tame-lamps-travel.md  violet-zoos-press.md  witty-peaches-fly.md  yellow-bags-repair.md  yellow-kiwis-design.md
.github/workflows/: release.yml  rust-build.yml
bench/normal/: allocateIdent.ts  bench-1.md  farm.config.ts  index.ts  package.json  tsconfig.json
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/transformer/: Cargo.toml
crates/transformer/src/: collector.rs  filter.rs  lib.rs  main.rs  replacer.rs  transformer.rs  util.rs
crates/transformer/src/optimize/: mod.rs
crates/transformer/src/optimize/gzip/: git_bits.rs  main.rs  mod.rs  util.rs
crates/transformer/src/util/: mod.rs  script.rs
crates/transformer/tests/: options.rs
crates/transformer/tests/fixtures/examples/args/: index.js  output.md
crates/transformer/tests/fixtures/options/skip_arg/: config.skip_arg_disable.json  config.skip_arg_enable.json  index.js  output.md  output.skip_arg_disable.md  output.skip_arg_enable.md
crates/transformer/tests/fixtures/options/skip_lit_arg/: config.skip_lit_arg_disable.json  config.skip_lit_arg_enable.json  index.js  output.md  output.skip_lit_arg_disable.md  output.skip_lit_arg_enable.md
crates/transformer/tests/fixtures/options/subpath/: config.subpath_disable.json  config.subpath_enable.json  output.md  output.subpath_enable.md
examples/webpack-plugin/: CHANGELOG.md  package.json  webpack.config.js
src/: main.rs
(+12 files in other folders)
