[package]
name = "omm_transformer"
version = "0.1.0"
edition = "2021"

[dependencies]
swc_ecma_parser = "6.0.1"
swc_ecma_visit = "5.0.0"
swc_ecma_ast = "5.0.0"
swc_ecma_codegen = "5.0.1"
omm_core = { path = "../core" }
anyhow = "1.0.95"
swc_common = "5.0.0"
itertools = "0.13.0"
serde = "1.0.217"
serde_json = "1.0.134"

napi = { version = "2.12.2", default-features = false, features = [
    "napi4",
    "serde-json",
    "anyhow"
], optional = true }
napi-derive = { version = "2.12.2", optional = true }


[build-dependencies]
napi-build = { version = "2.0.1", optional = true }

[features]
default = []
node = ["dep:napi", "dep:napi-derive", "dep:napi-build"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = "symbols"
