[package]
name = "omm_transformer"
version = "0.1.0"
edition = "2021"

[dependencies]
swc_ecma_parser = "7.0.1"
swc_ecma_visit = "5.0.0"
swc_ecma_ast = "5.0.0"
swc_ecma_codegen = "5.0.1"
omm_core = { path = "../core" }
anyhow = "1.0.95"
swc_common = { version = "5.0.0", features = ["sourcemap"] }
itertools = "0.14.0"
serde = "1.0.217"
serde_json = "1.0.134"
rustc-hash = "2.1.0"
swc_error_reporters = "6.0.0"
swc_ecma_transforms = "10.0.0"
swc_ecma_utils = "8.0.0"
sourcemap = "9.1.2"
enhanced-magic-string = "0.1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", default-features = false, features = ["alloc", "env-filter", "json", "tracing"] }

napi = { version = "2.12.2", default-features = false, features = [
    "napi4",
    "serde-json",
    "anyhow",
], optional = true }
napi-derive = { version = "2.12.2", optional = true }


[build-dependencies]
napi-build = { version = "2.0.1", optional = true }

[features]
default = []
node = ["dep:napi", "dep:napi-derive", "dep:napi-build"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = "symbols"
